--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,9 +6,9 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary: #6ecaff;
+  --ifm-color-primary-dark: #294778;
+  --ifm-color-primary-darker: #92a8f8f5;
   --ifm-color-primary-darkest: #205d3b;
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
